filter_macros/tests/try/err/filter_duplicate_key.stderr
error: duplicate key `table_name` in #[filter]
 --> tests/try/err/filter_duplicate_key.rs:5:28
  |
5 | #[filter(table_name = "a", table_name = "b")]
  |                            ^^^^^^^^^^^^^^^^
